# Eff-Mobile-junior

./: Makefile  README.md  pyproject.toml
restaurant/: settings.py  urls.py  views.py
restaurant/dishes/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
restaurant/dishes/migrations/: 0001_initial.py
restaurant/orders/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
restaurant/orders/migrations/: 0001_initial.py
restaurant/statuses/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
restaurant/statuses/migrations/: 0001_initial.py
restaurant/tables/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
restaurant/tables/migrations/: 0001_initial.py
restaurant/templates/: base.html  revenue.html
restaurant/templates/actions/: create_or_update.html  delete.html
restaurant/templates/dishes/: dishes.html
restaurant/templates/orders/: orders.html
restaurant/templates/statuses/: statuses.html
restaurant/templates/tables/: tables.html
